# GitblitSearchApiPlugin

./: AGENTS.md  Dockerfile  Jenkinsfile  README.md  pom.xml
lib/: gitblit-1.10.0.pom
scripts/: args.sh
src/main/assembly/: plugin.xml
src/main/java/com/gitblit/plugin/mcp/: MCPApiFilter.java  MCPSupportPlugin.java
src/main/java/com/gitblit/plugin/mcp/handlers/: CommitSearchHandler.java  FileHandler.java  FileSearchHandler.java  FilesHandler.java  FindFilesHandler.java  ReposHandler.java  RequestHandler.java
src/main/java/com/gitblit/plugin/mcp/model/: CommitSearchResponse.java  ErrorResponse.java  FileContentResponse.java  FileListResponse.java  FileSearchResponse.java  RepoListResponse.java
src/main/java/com/gitblit/plugin/mcp/util/: ResponseWriter.java
src/main/java/com/gitblit/plugin/search/: SearchApiFilter.java  SearchPlugin.java
tests/: README.md  conftest.py  pyproject.toml
tests/tests/: test_file.py  test_files.py  test_repos.py  test_search_commits.py  test_search_files.py
